--- a/style.css
+++ b/style.css
@@ -169,18 +169,19 @@ th, td {
 
 @media (max-width: 600px) {
   form {
-    flex-wrap: nowrap;
-    flex-direction: row;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+    align-items: stretch;
   }
 
-  #cityInput, #modeSelect {
-    width: 30%;
-    margin-right: 0;
+  #modeSelect,
+  #cityInput {
+    width: 100%;
+    margin-bottom: 10px;
   }
 
   button[type="submit"] {
-    width: 30%;
+    width: 100%;
     padding: 10px;
   }
 }
